js262/test/language/statements/using/syntax/without-initializer-do-statement-while-expression.js


/*---
esid: sec-do-while-statement
description: >
    using declarations without initialisers in statement positions:
    do Statement while ( Expression )
negative:
  phase: parse
  type: SyntaxError
features: [explicit-resource-management]
---*/

$DONOTEVALUATE();
do using x; while (false)
